loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:5: error: reassignment to val
      biscuits = biscuits + 1;
               ^